<resources>
    <string name="app_name">AmpacheAlbumPlayer</string>
    <string name="no_internet_access_abort">Permission denied. The app cannot be used without network access.</string>
    <string name="no_config">Ampache Server settings are incomplete, starting configuration</string>
    <string name="settings">Settings</string>
    <string name="ampache_server_url">Address of the Ampache server</string>
    <string name="ampache_user">Ampache user name</string>
    <string name="ampache_password">Ampache password</string>
    <string name="save">Save</string>
    <string name="player_service_description">Audio Player Service</string>
    <string name="player_notification_title">Ampache Player</string>
    <string name="player_notification_message">Ampache Player</string>
    <string name="notification_chname">AmpachePlayerNotificationChannel</string>
    <string name="notification_chdescription">Ampache Player Service notification channel</string>
    <string name="sort">Sort type</string>
    <string name="album_activity">ialbum selection</string>
    <string name="player">Player</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="old_dev_no_enc">Cannot store encrypted password on device (Android older than 4.4)</string>
    <string name="album_name">Album name</string>
    <string name="artist">Artist</string>
    <string name="switch_to_sort_order">Sort order set to %1s</string>
</resources>
